examples/test/testpolicy17961.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17961
  namespace: namespace469
spec:
  podSelector:
    matchLabels:
      key5: value21
      key4: value46
      key26: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value48
      podSelector:
        matchLabels:
          key9: value17
          key48: value28
          key19: value46
